# MCP-Tools

./: Ent.py  README.md  evolve-mcp 重写说明.md  pyproject.toml  requirements.txt  版本说明.txt
Lib/: __init__.py  add.py  add_safety_pattern.py  analyze_prompt.py  calculate.py  cancel_evolution.py  check_evolution_trigger.py  check_safety.py  complex_search.py  count_lines.py  create_directory.py  create_tool.py  crossover_variants.py  delete_file.py  detect_anomalies.py  download_file.py  evaluate_variant.py  evolve_core.py  explain_fitness.py  fanqie_api.py  fanqie_book.py  fanqie_config.py  fanqie_content.py  fanqie_misc.py  fanqie_search.py  file_info.py  generate_ab_pair.py  generate_population.py  get_current_date.py  get_dangerous_patterns.py  get_everything_info.py  get_evolution_status.py  get_metrics_window.py  get_system_info.py  get_time.py  get_weather.py  git_clone.py  git_pull.py  grep.py  hello_world.py  (+26 more)
Lib/base/: base.py
Lib/browser_automation/: __init__.py  browser_automation_mcp.py  browser_manager.py  tools_cookies.py  tools_debug.py  tools_environment.py  tools_interaction.py  tools_navigate.py  tools_network.py
Lib/evolution/: __init__.py  add_safety_pattern.py  analyze_prompt.py  cancel_evolution.py  check_evolution_trigger.py  check_safety.py  crossover_variants.py  detect_anomalies.py  evaluate_variant.py  evolution_state.json  evolve_core.py  explain_fitness.py  generate_ab_pair.py  generate_population.py  get_evolution_status.py  get_metrics_window.py  list_fitness_functions.py  mutate_prompt.py  record_metrics.py  register_fitness_function.py  resume_evolution.py  start_evolution.py  update_fitness_weights.py  validate_variant.py
Lib/fanqie/: __init__.py  fanqie_api.py  fanqie_book.py  fanqie_content.py  fanqie_misc.py  fanqie_search.py
Lib/netease/: __init__.py  netease_config.py  netease_control.py  netease_daily.py  netease_playlist.py  netease_search.py
Lib/pdf_reader/: __init__.py  pdf_read_local.py  pdf_read_url.py
Lib/prompts/: create_prompt_template.txt  prompt_registry.py  refactor_mcp_project.txt
Lib/sequential_thinking/: __init__.py  config.py  thinking_core.py  tool_register.py
Lib/tools/: add.py  calculate.py  complex_search.py  count_lines.py  create_tool.py  (+28 more)
