[project]
name = "my-mcp-server"
version = "0.3.0"
description = "Ent MCP Server - A comprehensive MCP server with Evolution capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "everytools",
    "ddgs",
    "httpx",
    "selectolax",
    "requests", # 番茄小说服务依赖
    "pyautogui>=0.9.54",
    "PyPDF2>=3.0.0", # PDF Reader MCP 依赖
    "selenium>=4.0.0",
    "psutil>=5.9.0",
    "pywin32>=306; platform_system='Windows'",
]

# 【猫娘修改】已同步版本至 v0.3.0，清理冗余依赖，保留 sequential_thinking 标准库实现

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
