[project]
name = "kaze-mimirin-mcp-server"
version = "0.5.1"
description = "KazeMiMiRin MCP Server v05 Ultimate Form - A comprehensive MCP server with Evolution capabilities, Browser Automation & KazeMiMiRin Core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "everytools",
    "ddgs",
    "httpx>=0.27.0",
    "selectolax",
    "requests", # 番茄小说服务依赖
    "playwright>=1.44.0", # 浏览器自动化模块依赖
    "pyautogui>=0.9.54",
    "PyPDF2>=3.0.0", # PDF Reader MCP 依赖
    "selenium>=4.0.0",
    "psutil>=5.9.0",
    "pywin32>=306; platform_system=='Windows'",
]

# 【猫娘修改】同步版本至 v0.5.1 Ultimate Form，更新项目描述与浏览器自动化依赖。【修改时间】：2026-05-16 11:00:00。

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
